# OpenCL

./: CMakeLists.txt  makefile  notes.txt
src/: CMakeLists.txt  config.i  main.cpp  support.cpp  support.h
src/kernels/: data_parallel.cl  glm_test0.cl  hello.cl  pass_through.cl
